--- a/main/templates/main/all-assignments-std.html
+++ b/main/templates/main/all-assignments-std.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% load static %}
-{% block title %}Assignments | {{ course.name }} | eLMS {% endblock title %}
+{% block title %}Assignments | {{ course.name }} | Huda Academy {% endblock title %}
 {% block profile %}
 {% url 'profile' student.student_id %}
 {% endblock %}
