--- a/main/templates/main/access.html
+++ b/main/templates/main/access.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block title %} {{ course.name }} | eLMS {% endblock title %}
+{% block title %} {{ course.name }} | Huda Academy {% endblock title %}
 {% block profile %}
 {% url 'profile' student.student_id %}
 {% endblock %}
