--- a/main/templates/main/departments.html
+++ b/main/templates/main/departments.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block title %} Departments | eLMS {% endblock title %}
+{% block title %} Departments | Huda Academy {% endblock title %}
 {% block profile %}
 {% if faculty  %} {% url 'profile' faculty.faculty_id %}
 {% else %} {% url 'profile' student.student_id %}
