--- a/main/templates/main/facultyCourses.html
+++ b/main/templates/main/facultyCourses.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block title %}Dashboard | H_Academy {% endblock title %}
+{% block title %}Dashboard | Huda Academy {% endblock title %}
 {% block profile %}
 {% url 'profile' faculty.faculty_id %}
 {% endblock %}
