--- a/main/templates/main/faculty_profile.html
+++ b/main/templates/main/faculty_profile.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block title %} {{faculty.name}} | eLMS {% endblock title %}
+{% block title %} {{faculty.name}} | Huda Academy {% endblock title %}
 {% block profile %}
 {% url 'profile' faculty.faculty_id %}
 {% endblock %}
