--- a/main/templates/main/myCourses.html
+++ b/main/templates/main/myCourses.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-{% block title %}Dashboard | eLMS {% endblock title %}
+{% block title %}Dashboard | Huda Academy {% endblock title %}
 {% block profile %}
 {% url 'profile' student.student_id %}
 {% endblock %}
