--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Log in | eLMS</title>
+    <title>Log in | Huda Academy</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
