--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends 'index.html' %}
 {% block title %}{{student.name}} | Huda Academy{% endblock title %}
 {% block profile %}
