--- a/attendance/templates/attendance/attendance.html
+++ b/attendance/templates/attendance/attendance.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 {% extends 'index.html' %}
 {% block title %}Attendance | {{ course.name }} {% endblock title %}
 {% block profile %}
