--- a/main/templates/main/access.html
+++ b/main/templates/main/access.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends 'index.html' %}
 {% block title %} {{ course.name }} | Huda Academy {% endblock title %}
 {% block profile %}
