--- a/main/templates/main/assignment-portal.html
+++ b/main/templates/main/assignment-portal.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends 'index.html' %}
 {% block title %} {{ assignment.title }} - eLMS {% endblock title %}
 {% block profile %}
