--- a/main/templates/main/faculty_profile.html
+++ b/main/templates/main/faculty_profile.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends 'index.html' %}
 {% block title %} {{faculty.name}} | Huda Academy {% endblock title %}
 {% block profile %}
